Fixed strange Safari stretching image issue by removing display flex from div container

--- a/docs/picblog/src/shared/ScrollContainer.scss
+++ b/docs/picblog/src/shared/ScrollContainer.scss
@@ -13,18 +13,13 @@ $bg-sixth-color: #38516A;
 }
 
 .section {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .section img {
   width: 50%;
   padding: 5%;
 }
-
-.two-columns {
-}
-
 
 .two-columns img {
   width: 40%;
